--- a/MVT/App/templates/App/inicio.html
+++ b/MVT/App/templates/App/inicio.html
@@ -17,9 +17,9 @@
         
             
             
-        <p>Nombre: <input style="border-radius: 10px; text-align: center;" type="text" name="nombre"></p>
-        <p>Apellido: <input style="border-radius: 10px; text-align: center;" type="number" name="apellido"></p>
-        <p>Dni: <input style="border-radius: 10px; text-align: center;" type="email" name="dni"></p>
+        <p>Nombre: <input style="border-radius: 10px; text-align: center;" type="text" name="nombre" pattern="[a-z]"></p>
+        <p>Apellido: <input style="border-radius: 10px; text-align: center;" type="text" name="apellido" pattern="[a-z]"></p>
+        <p>Dni: <input style="border-radius: 10px; text-align: center;" type="number" name="dni"></p>
          
           
 
