--- a/MVT/App/templates/App/inicio.html
+++ b/MVT/App/templates/App/inicio.html
@@ -17,8 +17,8 @@
         
             
             
-        <p>Nombre: <input style="border-radius: 10px; text-align: center;" type="text" name="nombre" pattern="[a-z]"></p>
-        <p>Apellido: <input style="border-radius: 10px; text-align: center;" type="text" name="apellido" pattern="[a-z]"></p>
+        <p>Nombre: <input style="border-radius: 10px; text-align: center;" type="text" name="nombre" pattern="[A-Za-z]{1,15}"></p>
+        <p>Apellido: <input style="border-radius: 10px; text-align: center;" type="text" name="apellido" pattern="[A-Za-z]{1,15}"></p>
         <p>Dni: <input style="border-radius: 10px; text-align: center;" type="number" name="dni"></p>
          
           
